Adjusted some nesting to clean up the less format.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <section class="top-section">
         <img id="portrait" src="img/me.jpg" alt=picture of Patrick Replogle>
         <div class="top-section-div">
-          <h1 id="h1">Patrick Replogle - Web Developer</h1>
-          <h3 id="h3">Technology is my Jam!</h3>
+          <h1>Patrick Replogle - Web Developer</h1>
+          <h3>Technology is my Jam!</h3>
           <hr>
-          <p id="p">Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website.</p>
+          <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website.</p>
         </div>
         <button>Let's Team Up</button>
     </section>
