--- a/index.html
+++ b/index.html
@@ -1,95 +1,116 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Patrick Replogle's Resume</title>
+    <title>Patrick Replogle's Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
-  <div class="container">
-    <header class="header">
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="https://patrick-replogle.github.io/Portfolio-Website-Test/" target="_blank">Porfolio</a>
-        <a href="#">Contact</a>
-      </nav>
-    </header>
+  <body>
+    <div class="container">
+      <header class="header">
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a
+            href="https://patrick-replogle.github.io/Portfolio-Website-Test/"
+            target="_blank"
+            >Porfolio</a
+          >
+          <a href="#">Contact</a>
+        </nav>
+      </header>
 
-    <section class="top-section">
-        <img id="portrait" src="img/me.jpg" alt=picture of Patrick Replogle>
+      <section class="top-section">
+        <img id="portrait" src="img/me.jpg" alt="picture" of Patrick Replogle />
         <div class="top-section-div">
           <h1>Patrick Replogle - Web Developer</h1>
           <h3>Technology is my Jam!</h3>
-          <hr>
-          <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website.</p>
+          <hr />
+          <p>
+            Occasionally I have time to work on side projects, if you're
+            interested, let me know by signing up on this website.
+          </p>
         </div>
         <button>Let's Team Up</button>
-    </section>
-    
-    <section class="middle-section">
-      <div class="div-box">
-        <h3>About Me:</h3>
-        <p>I am a full stack web developer from Portland, OR.  I am currently attending Lambda School
-          to hone my coding skills, however I also have a bachelor's degree in Music Business & Management from Berklee
-          School of Music.  My extensive background in customer service along with my communication skills will make me a perfect addition
-          to your team.</p>
-      </div>
-      <div class="div-box">
+      </section>
+
+      <section class="middle-section">
+        <div class="div-box">
+          <h3>About Me:</h3>
+          <p>
+            I am a full stack web developer from Portland, OR. I am currently
+            attending Lambda School to hone my coding skills, however I also
+            have a bachelor's degree in Music Business & Management from Berklee
+            School of Music. My extensive background in customer service along
+            with my communication skills will make me a perfect addition to your
+            team.
+          </p>
+        </div>
+        <div class="div-box">
           <h3>Skills:</h3>
           <table class="table1">
-            <tr><th>HTML</th></tr>
-            <tr><th>CSS</th></tr>
-            <tr><th>Javascript</th></tr>
-            <tr><th>Self-Motivated</th></tr>
-            <tr><th>Works Well Under Pressure</th></tr>
+            <tr>
+              <th>HTML</th>
+            </tr>
+            <tr>
+              <th>CSS</th>
+            </tr>
+            <tr>
+              <th>Javascript</th>
+            </tr>
+            <tr>
+              <th>Self-Motivated</th>
+            </tr>
+            <tr>
+              <th>Works Well Under Pressure</th>
+            </tr>
           </table>
         </div>
-    </section>
+      </section>
 
-    <section class="bottom-section">
-      <h3>Work History</h3>
-      <table id="table2">
-        <tr>
-          <th>YRS</th>
-          <th>Company</th>
-          <th>Title</th>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td>Powell's Books</td>
-          <td>Supervisor</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Starbucks</td>
-          <td>Barista</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Warp Records</td>
-          <td>Intern</td>
-        </tr>
-      </table>
-    </section>
+      <section class="bottom-section">
+        <h3>Work History</h3>
+        <table id="table2">
+          <tr>
+            <th>YRS</th>
+            <th>Company</th>
+            <th>Title</th>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Powell's Books</td>
+            <td>Supervisor</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Starbucks</td>
+            <td>Barista</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Warp Records</td>
+            <td>Intern</td>
+          </tr>
+        </table>
+      </section>
 
-    <footer>
-      <address>
-        Patrick Replogle<br>
-        Portland, OR <br>
-        T: 503-459-3818<br>
-        patrickr1138@gmail.com<br>
-      </address>
-    </footer>
-  </div>
-</body>
+      <footer>
+        <address>
+          Patrick Replogle<br />
+          Portland, OR <br />
+          T: 503-459-3818<br />
+          patrickr1138@gmail.com<br />
+        </address>
+      </footer>
+    </div>
+  </body>
 </html>
