--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </header>
 
       <section class="top-section">
-        <img id="portrait" src="img/me.jpg" alt="picture" of Patrick Replogle />
+        <img id="portrait" src="img/me.jpg" alt="picture of Patrick Replogle" />
         <div class="top-section-div">
           <h1>Patrick Replogle - Web Developer</h1>
           <h3>Technology is my Jam!</h3>
