--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
       </header>
 
       <section class="top-section">
-        <img id="portrait" src="img/me.jpg" alt="picture of Patrick Replogle" />
+        <img
+          id="portrait"
+          src="img/portrait.jpg"
+          alt="picture of Patrick Replogle"
+        />
         <div class="top-section-div">
           <h1>Patrick Replogle - Web Developer</h1>
           <h3>Technology is my Jam!</h3>
@@ -59,19 +63,19 @@
           <h3>Skills:</h3>
           <table class="table1">
             <tr>
-              <th>HTML</th>
-            </tr>
-            <tr>
-              <th>CSS</th>
+              <th>React JS</th>
             </tr>
             <tr>
               <th>Javascript</th>
             </tr>
             <tr>
-              <th>Self-Motivated</th>
+              <th>CSS</th>
             </tr>
             <tr>
-              <th>Works Well Under Pressure</th>
+              <th>HTML</th>
+            </tr>
+            <tr>
+              <th>Github</th>
             </tr>
           </table>
         </div>
